--- a/404.html
+++ b/404.html
@@ -9,7 +9,7 @@
 <script src=https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js></script>
 <script src=https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js integrity=sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa crossorigin=anonymous></script>
 <script>$(document).on("click",function(){$(".collapse").collapse("hide")})</script>
-<meta name=generator content="Hugo 0.93.0">
+<meta name=generator content="Hugo 0.93.1">
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-9419619-1"></script>
 <script>window.dataLayer=window.dataLayer||[];function gtag(){dataLayer.push(arguments)}gtag("js",new Date),gtag("config","UA-9419619-1")</script>
 <script type=text/javascript async src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
@@ -26,7 +26,7 @@
 </div><div class="collapse navbar-collapse">
 <ul class="nav navbar-nav">
 <li><a href=/>Home</a></li><li><a href=/education/>Education</a></li><li><a href=/work/>Work</a></li><li><a href=/research/>Research</a></li></ul><ul class="nav navbar-nav navbar-right">
-<li class=navbar-icon><a href=mailto:spam@linfati.cl><i class="fas fa-envelope"></i></a></li><li class=navbar-icon><a href=https://github.com/rlinfati/><i class="fas fa-code"></i></a></li><li class=navbar-icon><a href=https://github.com/rlinfati/CVitae/raw/master/vitae.pdf><i class="fab fa-linkedin"></i></a></li><li class=navbar-icon><a href=https://keys.openpgp.org/vks/v1/by-fingerprint/89A5DD1BAA92F88B5D20A2097CB1E8481902F941><i class="fas fa-id-badge"></i></a></li></ul></div></div></nav><main>
+<li class=navbar-icon><a href=mailto:info@linfati.cl><i class="fas fa-envelope"></i></a></li><li class=navbar-icon><a href=https://github.com/rlinfati/><i class="fas fa-code"></i></a></li><li class=navbar-icon><a href=https://github.com/rlinfati/CVitae/raw/master/vitae.pdf><i class="fab fa-linkedin"></i></a></li><li class=navbar-icon><a href=https://keys.openpgp.org/vks/v1/by-fingerprint/89A5DD1BAA92F88B5D20A2097CB1E8481902F941><i class="fas fa-id-badge"></i></a></li></ul></div></div></nav><main>
 <div class=intro>
 <h1>¯\_(ツ)_/¯</h1><h2>Nothing here</h2></div></main><footer>
 <p class="copyright text-muted">Powered by <a href=https://gohugo.io>Hugo</a> and <a href=https://github.com/calintat/minimal>Minimal</a>.</p></footer></body></html>
