--- a/research/index.html
+++ b/research/index.html
@@ -9,7 +9,7 @@
 <script src=https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js></script>
 <script src=https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js integrity=sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa crossorigin=anonymous></script>
 <script>$(document).on("click",function(){$(".collapse").collapse("hide")})</script>
-<meta name=generator content="Hugo 0.93.0">
+<meta name=generator content="Hugo 0.93.1">
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-9419619-1"></script>
 <script>window.dataLayer=window.dataLayer||[];function gtag(){dataLayer.push(arguments)}gtag("js",new Date),gtag("config","UA-9419619-1")</script>
 <script type=text/javascript async src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
@@ -26,7 +26,7 @@
 </div><div class="collapse navbar-collapse">
 <ul class="nav navbar-nav">
 <li><a href=/>Home</a></li><li><a href=/education/>Education</a></li><li><a href=/work/>Work</a></li><li><a href=/research/>Research</a></li></ul><ul class="nav navbar-nav navbar-right">
-<li class=navbar-icon><a href=mailto:spam@linfati.cl><i class="fas fa-envelope"></i></a></li><li class=navbar-icon><a href=https://github.com/rlinfati/><i class="fas fa-code"></i></a></li><li class=navbar-icon><a href=https://github.com/rlinfati/CVitae/raw/master/vitae.pdf><i class="fab fa-linkedin"></i></a></li><li class=navbar-icon><a href=https://keys.openpgp.org/vks/v1/by-fingerprint/89A5DD1BAA92F88B5D20A2097CB1E8481902F941><i class="fas fa-id-badge"></i></a></li></ul></div></div></nav><main>
+<li class=navbar-icon><a href=mailto:info@linfati.cl><i class="fas fa-envelope"></i></a></li><li class=navbar-icon><a href=https://github.com/rlinfati/><i class="fas fa-code"></i></a></li><li class=navbar-icon><a href=https://github.com/rlinfati/CVitae/raw/master/vitae.pdf><i class="fab fa-linkedin"></i></a></li><li class=navbar-icon><a href=https://keys.openpgp.org/vks/v1/by-fingerprint/89A5DD1BAA92F88B5D20A2097CB1E8481902F941><i class="fas fa-id-badge"></i></a></li></ul></div></div></nav><main>
 <div>
 <h2>Journal Papers & Research Projects</h2><h5></h5></div><div align=start class=content><h2 id=journal-papers>Journal Papers</h2><h3 id=google-scholargoogle-scholar---researchidresearchid---scopusscopus---orcdidorcdid><a href="https://scholar.google.cl/citations?user=6bJ02OAAAAAJ">Google Scholar</a> - <a href=http://www.researcherid.com/rid/X-9326-2018>ResearchID</a> - <a href="https://www.scopus.com/authid/detail.uri?authorId=55250033800">Scopus</a> - <a href=https://orcid.org/0000-0002-7659-383X>OrcdID</a></h3><hr>
 <h2 id=research-projects>Research Projects</h2><h4 id=fondef-it16m100019-co-researcher>FONDEF: IT16M100019, Co-researcher</h4><ul>
