--- a/work/index.html
+++ b/work/index.html
@@ -9,7 +9,7 @@
 <script src=https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js></script>
 <script src=https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js integrity=sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa crossorigin=anonymous></script>
 <script>$(document).on("click",function(){$(".collapse").collapse("hide")})</script>
-<meta name=generator content="Hugo 0.93.0">
+<meta name=generator content="Hugo 0.93.1">
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-9419619-1"></script>
 <script>window.dataLayer=window.dataLayer||[];function gtag(){dataLayer.push(arguments)}gtag("js",new Date),gtag("config","UA-9419619-1")</script>
 <script type=text/javascript async src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
@@ -26,7 +26,7 @@
 </div><div class="collapse navbar-collapse">
 <ul class="nav navbar-nav">
 <li><a href=/>Home</a></li><li><a href=/education/>Education</a></li><li><a href=/work/>Work</a></li><li><a href=/research/>Research</a></li></ul><ul class="nav navbar-nav navbar-right">
-<li class=navbar-icon><a href=mailto:spam@linfati.cl><i class="fas fa-envelope"></i></a></li><li class=navbar-icon><a href=https://github.com/rlinfati/><i class="fas fa-code"></i></a></li><li class=navbar-icon><a href=https://github.com/rlinfati/CVitae/raw/master/vitae.pdf><i class="fab fa-linkedin"></i></a></li><li class=navbar-icon><a href=https://keys.openpgp.org/vks/v1/by-fingerprint/89A5DD1BAA92F88B5D20A2097CB1E8481902F941><i class="fas fa-id-badge"></i></a></li></ul></div></div></nav><main>
+<li class=navbar-icon><a href=mailto:info@linfati.cl><i class="fas fa-envelope"></i></a></li><li class=navbar-icon><a href=https://github.com/rlinfati/><i class="fas fa-code"></i></a></li><li class=navbar-icon><a href=https://github.com/rlinfati/CVitae/raw/master/vitae.pdf><i class="fab fa-linkedin"></i></a></li><li class=navbar-icon><a href=https://keys.openpgp.org/vks/v1/by-fingerprint/89A5DD1BAA92F88B5D20A2097CB1E8481902F941><i class="fas fa-id-badge"></i></a></li></ul></div></div></nav><main>
 <div>
 <h2>Work Experience</h2><h5></h5></div><div align=start class=content><h3 id=universidad-del-bío-bío>Universidad del Bío-Bío</h3><h4 id=associate-professor-2012-today>Associate Professor (2012-today)</h4><ul>
 <li>Professor <em>Asociado</em> - <a href=http://industrial.ubiobio.cl/>Department of Industrial Engineering</a></li><li>Professor <em>Nucleo</em> - <a href=http://postgrados.ubiobio.cl/Magisteres/29/Ingenieria_Industrial/>Master of Science in Industrial Engineering</a></li><li>Professor <em>Claustro</em> - <a href=http://postgrados.ubiobio.cl/Doctorados/45/Ingenieria/>Doctor of Philosophy in Engineering</a></li></ul><h3 id=universidad-de-concepción>Universidad de Concepción</h3><ul>
